--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-certificatemanager": "^1.121.0",
+    "@aws-cdk/aws-route53": "^1.121.0",
+    "@aws-cdk/aws-s3": "^1.120.0",
+    "@aws-cdk/aws-s3-deployment": "^1.120.0",
     "@aws-cdk/core": "1.120.0",
     "source-map-support": "^0.5.16"
   }
