--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -37,6 +37,7 @@ jobs:
           git config --global user.email "sagardsaxena@gmail.com"
           git config --global user.name "Sagar Saxena"
           git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
+          git fetch
 
       # Pull website changes
       - name: Pull Infrastructure Changes
